navbar actualizado y fondo cambiado --> poner logo

--- a/PetHomeAngular/src/index.html
+++ b/PetHomeAngular/src/index.html
@@ -13,6 +13,10 @@
   body
 {
     background-image: url(/assets/img/fondoPetHome.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
 </style>
 
