rama actualizada. inicio hecho como kerubi , descubre mejorado y loader centrado

--- a/PetHomeAngular/src/index.html
+++ b/PetHomeAngular/src/index.html
@@ -24,13 +24,13 @@
 
 </head>
 <body>
-  <div id="loader" class="spinner">
+  <div id="loader">
     <!-- From Uiverse.io by rillala --> 
 <div class="spinner">
-  <div>N</div>
-  <div>O</div>
-  <div>R</div>
-  <div>A</div>
+  <div>-</div>
+  <div>T</div>
+  <div>E</div>
+  <div>P</div>
   <div class="icon-1">
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -45,10 +45,10 @@
       ></path>
     </svg>
   </div>
-  <div>N</div>
+  <div>E</div>
+  <div>M</div>
   <div>O</div>
-  <div>R</div>
-  <div>A</div>
+  <div>H</div>
   <div class="icon-2">
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -63,7 +63,7 @@
       ></path>
     </svg>
   </div>
-  <div class="middle">loading</div>
+  <!-- <div class="middle">loading</div> -->
 </div>
 <script>
   // Cuando la página se ha cargado completamente
