--- a/PetHomeAngular/src/index.html
+++ b/PetHomeAngular/src/index.html
@@ -65,13 +65,14 @@
   </div>
   <!-- <div class="middle">loading</div> -->
 </div>
+
 <script>
-  // Cuando la página se ha cargado completamente
+  
   window.addEventListener('load', function () {
-    // Oculta el loader
+    
     document.getElementById('loader').style.display = 'none';
-    // Muestra el contenido principal
-    document.getElementById('main-content').style.display = 'block';
+    
+    // document.getElementById('main-content').style.display = 'block';
   });
 </script>
 
