--- a/PetHomeAngular/src/index.html
+++ b/PetHomeAngular/src/index.html
@@ -22,8 +22,10 @@
 }
 </style>
 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <div id="loader">
     <!-- From Uiverse.io by rillala --> 
 <div class="spinner">
